# hybrid-knowledge-chatbot

./: .env  README.md  main.py  pyproject.toml  requirements.txt
internet_agent/: search.py
rag/: embed_and_store.py  retrieve.py
vector_db/: chroma.sqlite3
