[project]
name = "project-rag-lc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "langchain>=1.1.2",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.1.14",
    "langgraph>=1.0.4",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.0",
    "tiktoken>=0.12.0",
]
